# entangled-client

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/entangled-client/: Cargo.toml  README.md
crates/entangled-client-gui/: Cargo.toml  README.md
crates/entangled-client-gui/assets/: FONTS.md
crates/entangled-client-gui/examples/: dump_fixture.rs  pin_publisher.rs
crates/entangled-client-gui/src/: lib.rs  main.rs
crates/entangled-client-gui/tests/: load.rs
crates/entangled-client-store/: Cargo.toml
crates/entangled-client-store/src/: dto.rs  history.rs  identity.rs  lib.rs  protect.rs  root.rs
crates/entangled-client-store/tests/: corruption.rs  history.rs  protect.rs  roundtrip.rs
crates/entangled-client-store/tests/common/: mod.rs
crates/entangled-client/src/: chrome.rs  history.rs  image.rs  io.rs  lib.rs  pipeline.rs  trust.rs
crates/entangled-client/tests/: chrome.rs  corpus_image.rs  corpus_trust.rs  history.rs  image.rs  pipeline.rs  store_seams.rs  trust.rs
