[package]
name = "entangled-client-gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "egui shell for the Entangled v1.0 client: renders a verified document's content (Scene) and the chrome (ChromeView). Read-only viewer for now; not yet a conforming client."
readme = "README.md"
keywords = ["entangled", "egui", "client", "gui", "tor"]
categories = ["gui"]

# The crate is split: the `lib` holds the pure `load` (file -> verified Scene +
# ChromeView), testable without a window; the `entangled-client-gui` binary is
# the thin eframe/egui shell that draws them.
[lib]
name = "entangled_client_gui"
path = "src/lib.rs"

[[bin]]
name = "entangled-client-gui"
path = "src/main.rs"

[features]
# Forwards the optional passphrase-encrypted store mode to the store crate so
# `--store-encrypted` is available when built with this feature.
encrypted = ["entangled-client-store/encrypted"]

[dependencies]
entangled-core = { workspace = true }
entangled-engine = { workspace = true }
entangled-client = { path = "../entangled-client" }
entangled-client-store = { path = "../entangled-client-store" }
eframe = "0.29"
egui = "0.29"
# Cheap top-level parse of the manifest's publisher_pubkey to key the store
# before full verification, and the store path default.
serde_json = "1"
directories = "5"
rpassword = "7"

[dev-dependencies]
# Used by the load test to derive a Tor v3 onion address from an origin pubkey,
# so a built manifest passes Stage 9 origin binding.
data-encoding = "2"
sha3 = "0.10"
tempfile = "3"
